2013-03-07  Andy Buckley  <andy.buckley@cern.ch>

	* Renaming existing uses of ParticleVector to the new 'Particles' type.

	* Updating util classes, projections, and analyses to deal with
	the HepMC return value changes.

	* Adding new Particle(const GenParticle*) constructor.

	* Converting Particle::genParticle() to return a const pointer
	rather than a reference, for the same reason as below (+
	consistency within Rivet and with the HepMC pointer-centric coding
	design).

	* Converting Event to use a different implementation of original
	and modified GenParticles, and to manage the memory in a more
	future-proof way. Event::genParticle() now returns a const pointer
	rather than a reference, to signal that the user is leaving the
	happy pastures of 'normal' Rivet behind.

	* Adding a Particles typedef by analogy to Jets, and in preference
	to the cumbersome ParticleVector.

	* bin/: Lots of tidying/pruning of messy/defunct scripts.

	* Creating spiresbib, util, and plotinfo rivet python module
	submodules: this eliminates lighthisto and the standalone
	spiresbib modules. Util contains convenience functions for Python
	version testing, clean ElementTree import, and process renaming,
	for primary use by the rivet-* scripts.

	* Removing defunct scripts that have been replaced/obsoleted by YODA.

2013-03-06  Andy Buckley  <andy.buckley@cern.ch>

	* Fixing doc build so that the reference histos and titles are
	~correctly documented. We may want to truncate some of the lists!

2013-03-06  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added ATLAS_2012_I1125575 analysis

	* Converted rivet-mkhtml to yoda

	* Introduced rivet-cmphistos as yoda based replacement for compare-histos

2013-03-05  Andy Buckley  <andy.buckley@cern.ch>

	* Replacing all AIDA ref data with YODA versions.

	* Fixing the histograms entries in the documentation to be
	tolerant to plotinfo loading failures.

	* Making the findDatafile() function primarily find YODA data