@@ -1,3 +1,7 @@
+2013-03-09  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Fixing a symbol misnaming in ATLAS_2012_I1119557.
+
 2013-03-07  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Renaming existing uses of ParticleVector to the new 'Particles' type.
